Closed Bug 170179 Opened 23 years ago Closed 23 years ago

nsWindowDataSource leaks some RDF stuff

Categories

(SeaMonkey :: UI Design, defect, P3)

x86
Linux
defect

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.2beta

People

(Reporter: dbaron, Assigned: dbaron)

Details

(Keywords: memory-leak, Whiteboard: [patch][tind-mlk])

Attachments

(1 file)

nsWindowDataSource leaks its RDF global variables, since its gRefCnt is never incremented. I'll attach one possible patch for fixing it, although if the object is guaranteed to have only one instance for the entire app, I don't see why these shouldn't just become member variables.
Status: NEW → ASSIGNED
Keywords: mlk
Priority: -- → P3
Whiteboard: [patch][tind-mlk]
Target Milestone: --- → mozilla1.2beta
Comment on attachment 100152 [details] [diff] [review] patch (simple approach) oops. sr=alecf
Attachment #100152 - Flags: superreview+
as for why they aren't member vars, I don't know. Its a pattern that we use all over the place in datasources so that we don't waste memory if there are multiple instances of the datasource.. though frankly datasources like this will really only have one instance.
Comment on attachment 100152 [details] [diff] [review] patch (simple approach) r=bryner
Attachment #100152 - Flags: review+
Fix checked in to trunk, 2002-09-23 20:20 PDT.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Product: Core → Mozilla Application Suite
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: