Remember to increment gRefCnt so we don't leak global variables.  sr=alecf  r=bryner  b=170179